clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: lab-service1
spec:
  selector:
    app: lab
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: lab-service2
spec:
  selector:
    app: lab
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
